Create commit Vue components for diffs
These are Vue clones of:

- `diffs/_commit_widget.html.haml`
- `commits/_commit.html.haml`

Also:

- Generate a fresh pot

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -1738,6 +1738,9 @@ msgstr ""
 msgid "CommitMessage|Add %{file_name}"
 msgstr ""
 
+msgid "CommitWidget|authored"
+msgstr ""
+
 msgid "Commits"
 msgstr ""
 
