--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -3645,6 +3645,9 @@ msgstr ""
 msgid "Median"
 msgstr ""
 
+msgid "Member since %{date}"
+msgstr ""
+
 msgid "Members"
 msgstr ""
 
@@ -6461,6 +6464,57 @@ msgid "User and IP Rate Limits"
 msgstr ""
 
 msgid "User map"
+msgstr ""
+
+msgid "UserProfile|Activity"
+msgstr ""
+
+msgid "UserProfile|Already reported for abuse"
+msgstr ""
+
+msgid "UserProfile|Contributed projects"
+msgstr ""
+
+msgid "UserProfile|Edit profile"
+msgstr ""
+
+msgid "UserProfile|Groups"
+msgstr ""
+
+msgid "UserProfile|Issues, merge requests, pushes and comments."
+msgstr ""
+
+msgid "UserProfile|Most Recent Activity"
+msgstr ""
+
+msgid "UserProfile|Overview"
+msgstr ""
+
+msgid "UserProfile|Personal projects"
+msgstr ""
+
+msgid "UserProfile|Recent contributions"
+msgstr ""
+
+msgid "UserProfile|Report abuse"
+msgstr ""
+
+msgid "UserProfile|Snippets"
+msgstr ""
+
+msgid "UserProfile|Subscribe"
+msgstr ""
+
+msgid "UserProfile|Summary of issues, merge requests, push events, and comments"
+msgstr ""
+
+msgid "UserProfile|This user has a private profile"
+msgstr ""
+
+msgid "UserProfile|View all"
+msgstr ""
+
+msgid "UserProfile|View user in admin area"
 msgstr ""
 
 msgid "Users"
